# FIQ

./: .gitignore  AGENTS.md  README.md  compose.yaml  deploy_main.sh  deploy_to_vps.sh  docker-compose.local-ha.yml  docker-compose.prod.yml  docker-compose.yml  informe_tecnico_ha.md  opencode.json  package-lock.json  package.json  render.yaml
backend/: .dockerignore  .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 7ad9edad17b3_initial_schema.py  a99844a39edd_add_mendeley_fields.py
backend/app/: main.py
backend/app/api/auth/: router.py  schemas.py
backend/app/api/external_catalog/: __init__.py  cache.py  clients.py  router.py  schemas.py
backend/app/api/labs/: crud.py  router.py  schemas.py
backend/app/api/resources/: crud.py  router.py  service.py  upload.py
backend/app/api/users/: router.py
backend/app/core/: cache.py  config.py  database.py  dependencies.py  mongo.py  s3.py  security.py  seed.py  seed_base.py  seed_mock.py  users.py
backend/app/logs/: crud.py  router.py  schemas.py
backend/app/models/: activity.py  lab.py  resource.py  user.py
backend/app/reports/: queries.py  router.py  schemas.py
backend/app/schemas/: resource.py  user.py
backend/scripts/: check_openapi_docs.py
backend/tests/: conftest.py  test_mvp.py
deploy_scripts/: backup_datastores.sh  deploy_ha_db.sh  deploy_postgres_ha.sh  duckdns_update.sh  github_actions_ssh_setup.sh  restore_verify.sh  snapshot_repository.sh  test_postgres_ha_failover.sh
docs/: 01_contexto_proyecto.md  02_gestion_agil.md  03_arquitectura_software.md  04_modelo_datos.md  05_especificacion_api.md  06_seguridad_zero_trust.md  07_infraestructura_devops.md  08_estado_brechas.md  09_seguridad_uploads.md  10_roles_permisos.md  11_pruebas.md  12_laboratorios.md  13_integraciones_externas.md  (+3 more)
(+134 files in other folders)
