[project]
name = "fiq-backend"
version = "1.0.0"
description = "API de la Plataforma Digital FIQ - UNCP (Production-Grade)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlmodel>=0.0.22",
    "fastapi-users[sqlalchemy]>=14.0",
    "fastapi-users-db-sqlmodel>=0.3.0",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2", # Used by Alembic sync migrations only (not by async app runtime)
    "alembic>=1.15",
    "pydantic-settings>=2.8",
    "aioboto3>=13.4",
    "python-dotenv>=1.1",
    "bcrypt>=4.2.0",
    "python-multipart>=0.0.20",
    "httpx>=0.27",
    "python-jose[cryptography]>=3.3.0",
    "pymongo>=4.17,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
    "pytest-asyncio>=0.25",
    "aiosqlite>=0.20",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
